# blog-project

./: .gitignore  Cargo.toml  README.md
blog-cli/: Cargo.toml
blog-cli/src/: main.rs
blog-client/: Cargo.toml  build.rs
blog-client/proto/: blog.proto
blog-client/src/: dto.rs  error.rs  grpc_client.rs  http_client.rs  lib.rs  proto.rs  transport.rs
blog-server/: Cargo.toml  build.rs
blog-server/migrations/: 20250101000001_create_users.sql  20250101000002_create_posts.sql
blog-server/proto/: blog.proto
blog-server/src/: main.rs
blog-server/src/application/: auth_service.rs  blog_service.rs  mod.rs
blog-server/src/data/: mod.rs  post_repository.rs  user_repository.rs
blog-server/src/domain/: error.rs  mod.rs  post.rs  user.rs
blog-server/src/infrastructure/: config.rs  database.rs  jwt.rs  logging.rs  mod.rs
blog-server/src/presentation/: auth.rs  dto.rs  grpc_service.rs  middleware.rs  mod.rs  proto.rs
blog-server/src/presentation/http_handlers/: mod.rs  protected.rs  public.rs
blog-wasm/: Cargo.toml  app.css  index.html
blog-wasm/src/: api.rs  components.rs  lib.rs  main.rs  storage.rs
blog-wasm/src/components/: home_page.rs  login_modal.rs  mod.rs  post_card.rs  post_modal.rs  posts_section.rs  registration_modal.rs
