[workspace]
members = [
    "blog-server",
    "blog-client",
    "blog-cli",
    "blog-wasm",
]
resolver = "2"

[workspace.dependencies]
blog-client = { path = "blog-client" }
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
prost = "0.14.3"
protoc-bin-vendored = "3.2.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tonic = "0.14.5"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
uuid = "1.23.0"
