[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
chrono = { version =  "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
tonic = "0.14.5"
tonic-prost = "0.14.5"
prost = "0.14.3"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.5"
