[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"

[features]
default = ["native-clients"]
native-clients = ["dep:reqwest", "dep:thiserror", "dep:tonic", "dep:tonic-prost", "dep:prost"]

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "query"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.0", features = ["v4", "serde", "js"] }
chrono = { version =  "0.4.44", features = ["serde"] }
thiserror = { version = "2.0.18", optional = true }
tonic = { version = "0.14.5", optional = true }
tonic-prost = { version = "0.14.5", optional = true }
prost = { version = "0.14.3", optional = true }

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.5"
