[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"

[features]
default = ["native-clients"]
native-clients = ["dep:reqwest", "dep:thiserror", "dep:tonic", "dep:tonic-prost", "dep:prost"]

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "query"], optional = true }
serde.workspace = true
uuid = { workspace = true, features = ["v4", "serde", "js"] }
chrono.workspace = true
thiserror = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
prost = { workspace = true, optional = true }

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-prost-build.workspace = true
