[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.13.0"
config = "0.15.22"
sqlx = "0.9.0-alpha.1"
dotenvy = "0.15.7"
env_logger = "0.11.10"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "chrono"] }
tracing = "0.1.44"
chrono = "0.4.44"

[build-dependencies]
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"
protoc-bin-vendored = "3.2.0"
