[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.13.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "chrono"] }
tracing = "0.1.44"
chrono.workspace = true
serde.workspace = true
serde_json = "1"
anyhow.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
async-trait = "0.1.89"
argon2 = "0.6.0-rc.8"
password-hash = "0.6.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
thiserror.workspace = true
futures-util = "0.3.32"
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
protoc-bin-vendored.workspace = true
